# Lyrics-Finder

./: .gitignore  README.md
lyrsagashi/: index.html  package-lock.json  package.json  vite.config.js
lyrsagashi/scripts/: rename-msi.mjs  sync-tauri-version.mjs
lyrsagashi/src/: main.js  styles.css
lyrsagashi/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
lyrsagashi/src-tauri/capabilities/: default.json
lyrsagashi/src-tauri/icons/: icon.icns
lyrsagashi/src-tauri/src/: main.rs
