[package]
name = "lyricat"
version = "0.1.0"
description = "Lyricat – lyrics finder system tray app"
authors = ["you"]
edition = "2021"

[lib]
name = "lyricat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
image = "0.25"
