[package]
name = "lyricat"
version = "1.0.5"
description = "Lyricat – lyrics finder system tray app"
authors = ["you"]
edition = "2021"

[lib]
name = "lyricat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
image = "0.25"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-dialog = "2.6.0"
dotenvy = "0.15"
url = "2"
